--- a/_data/XC3000/XC3000.md
+++ b/_data/XC3000/XC3000.md
@@ -2,5 +2,5 @@
 name: Richard Henry Rozario
 institution: Institute of Engineering and Management
 quote: Sometimes bugs solve problems you never knew existed
-github_user: YOUR-GITHUB-USERNAME
+github_user: XC3000
 ---
