trim to 100 chars

--- a/_data/utk1801/utk1801.md
+++ b/_data/utk1801/utk1801.md
@@ -1,7 +1,7 @@
 ---
 name: UTKARSH GARG
 institution: Stony Brook University, New York.
-quote: Keep Hustling..There's nothing more powerful than the strong will and determination to reach greater heights. Stay Strong. 
+quote: There's nothing more powerful than the firm will to reach greater heights.Stay Strong.Keep Husting. 
 github_user: utk1801
 ---
 
