Update and rename jing1201.md to JING1201.md

--- a/_data/jing1201/JING1201.md
+++ b/_data/jing1201/JING1201.md
@@ -2,5 +2,5 @@
 name: Jing
 institution: University of Florida
 quote: yayyyyyyyyyy now I can code full time
-github_user: jing1201
+github_user: JING1201
 ---
