--- a/_data/apul1421/apul1421.md
+++ b/_data/apul1421/apul1421.md
@@ -1,5 +1,5 @@
 ---
-name: apulg
+name: Apul Gupta
 institution: Liverpool John Moores University
 quote: If opportunity doesn't knock, build a door
 github_user: apul1421
