--- a/_data/AJV009/AJV009.md
+++ b/_data/AJV009/AJV009.md
@@ -2,5 +2,5 @@
 name: Alphons Jaimon
 institution: Government Polytechnic Ahmednagar
 quote: You can do anything, until you know you can imagine about it.
-github_user: ajv009
+github_user: AJV009
 ---
