change username to string

--- a/_data/320834/320834.md
+++ b/_data/320834/320834.md
@@ -2,5 +2,5 @@
 name: Justin Chen
 institution: New York University
 quote: There is a difference between git and github.
-github_user: 320834
+github_user: __320834__
 ---
